k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-backend
  template:
    metadata:
      labels:
        app: notes-backend
        tier: notes-backend-service
    spec:
      containers:
        - name: notes-backend
          image: ishannikeshala99/notes-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notes-backend-service
spec:
  type: ClusterIP
  selector:
    app: notes-backend
    tier: notes-backend-service
  ports:
    - port: 80
      targetPort: 8080
