k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend-deployment
  labels:
    app: notes-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
        - name: notes-frontend
          image: ishannikeshala99/notes-frontend:latest
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend-service
spec:
  type: NodePort
  selector:
    app: notes-frontend
  ports:
   - port: 3000
     targetPort: 3000
     nodePort: 30008
