k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: notes.local 
      http:
        paths:
          - path: /api/v1/ne
            pathType: Prefix
            backend:
              service:
                name: notes-backend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-frontend-service
                port:
                  number: 80
